[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://Menus/BackToMainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://Materials/ani.ttf"

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=3]

default_font = SubResource( 2 )

[node name="lobby" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags", "Theme" ]

[node name="players" type="Panel" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 78.0
margin_right = 847.0
margin_bottom = 503.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="label" type="Label" parent="players" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 18.0
margin_right = 249.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Awaiting Players..."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="start" type="Button" parent="players" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 241.0
margin_top = 346.0
margin_right = 366.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START!"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="list" type="ItemList" parent="players" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 71.0
margin_right = 594.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )

[node name="connect" type="Panel" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -266.0
margin_right = 478.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Rect" ]

[node name="Button" type="Button" parent="connect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 15.0
margin_right = 136.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
script = ExtResource( 2 )

[node name="name_label" type="Label" parent="connect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 264.0
margin_top = 198.0
margin_right = 357.0
margin_bottom = 229.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name" type="LineEdit" parent="connect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 425.0
margin_top = 195.0
margin_right = 711.0
margin_bottom = 257.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="ip_label" type="Label" parent="connect" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 315.0
margin_top = 338.0
margin_right = 357.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ip" type="LineEdit" parent="connect" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 423.0
margin_top = 337.0
margin_right = 695.0
margin_bottom = 399.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="host" type="Button" parent="connect" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 508.0
margin_top = 467.0
margin_right = 585.0
margin_bottom = 504.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Host"
flat = false
align = 1

[node name="join" type="Button" parent="connect" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_top = 470.0
margin_right = 391.0
margin_bottom = 507.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join"
flat = false
align = 1

[node name="error_label" type="Label" parent="connect" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 299.0
margin_top = 406.0
margin_right = 541.0
margin_bottom = 437.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="error" type="AcceptDialog" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 55.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_hide_on_ok = true

[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]

[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]


